tests/samples/positive/functions/lambda_closure_return.ax
module lambda_closure_return;

fn make_adder(base: i32) {
    return [base](value: i32) -> i32 => value + base;
}

fn make_scaled_offset(scale: i32, offset: i32) {
    return [scale, offset](value: i32) -> i32 {
        let scaled: i32 = value * scale;
        return scaled + offset;
    };
}

fn main() -> i32 {
    let add = make_adder(40);
    let scale = make_scaled_offset(3, 4);
    return add(2) + scale(5) - 61;
}
