tests/samples/negative/functions/lambda_nested_capture_unsupported.ax
module lambda_nested_capture_unsupported;

fn make_adder(value: i32) -> fn(i32) -> i32 {
    return fn(offset: i32) -> fn(i32) -> i32 {
        return fn(next: i32) -> i32 => next + offset + value;
    }(1);
}

fn main() -> i32 {
    let add: fn(i32) -> i32 = make_adder(40);
    return add(1);
}
